# intellifire4py

./: .commitlintrc.json  .coveragerc  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cspell.config.yaml  dev.md  example.py  example2.py  example3.py  example_cloud_info.py  example_discovery.py  example_poll.py  example_smoke_test_local.py  example_unified_smoke_test.py  flake.nix  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sonar-project.properties
.github/: WORKFLOWS_GUIDE.md
.github/workflows/: build.yaml  constraints.txt  coverage-comment.yml  docs.yml  labeler.yml  lint.yml  poetry.yml  release.yml  rye.yml  slsa-provenance.yml  test.yml  tests.yml  uv.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
intellifire4py/: __init__.py  cloud_api.py  cloud_interface.py  const.py  control.py  control_async.py  exceptions.py  fire_finder.py  intellifire.py  intellifire_async.py  intellifirepolldata.py  local_api.py  model.py  read.py  read_async.py  status.py  test_intellifire.py  udp.py  udp_async.py  udp_sync.py  unified_fireplace.py  utils.py
scripts/: run-in-env.sh
src/intellifire4py/: __init__.py  cloud_api.py  cloud_interface.py  const.py  control.py  exceptions.py  local_api.py  model.py  read.py  udp.py  unified_fireplace.py  utils.py
tests/: __init__.py  conftest.py  error_6.json  test1.json  test_cloud_api.py  test_cloud_api_extended.py  test_cloud_interface_extended.py  test_const.py  test_const_enum.py  test_control.py  test_coverage_boost.py  test_coverage_final_push.py  test_coverage_gaps.py  test_coverage_push.py  test_dev.py  test_exceptions.py  test_intellifire.py  test_intellifire_random.py  test_intellifire_status.py  test_local_api.py  test_local_api_extended.py  test_model.py  test_model_dataclass.py  test_read.py  test_read_async.py  test_udp.py  test_unified.py  test_utils.py
tests/fixtures/: cloud_poll.json  enumfireplaces.json  enumfireplaces_notehome.json  enumlocations.json  enumlocations_2.json  error_6_642.json  local_poll.json  poll.json
