[tool.poetry]
name = "intellifire4py"
version = "3.1.12"
description = "Intellifire4Py"
authors = ["Jeff Stein <jeffstein@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jeeftor/intellifire4py"
repository = "https://github.com/jeeftor/intellifire4py"
documentation = "https://intellifire4py.readthedocs.io"
classifiers = ["Development Status :: 5 - Production/Stable"]

[tool.poetry.urls]
Changelog = "https://github.com/jeeftor/intellifire4py/releases"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = ">=1.10.2"
aenum = ">=3.1.11"
httpx = ">=0.23.0"
# Rich is needed
rich = "10.16.2"


[tool.poetry.dev-dependencies] # rich <11.0.0,>=10.1.0, but you have rich 12.6.0.
# mycroftapi 2.0 has requirement websocket-client==0.44.0, but you have websocket-client 1.5.1.
# ibm-watson 5.2.2 has requirement websocket-client==1.1.0, but you have websocket-client 1.5.1.
# Pygments = ">=2.10.0"
# click = ">=8.1.3"

# black = ">=21.10b0"
# coverage = { extras = ["toml"], version = ">=6.2" }
# darglint = ">=1.8.1"
# flake8 = ">=4.0.1"
# flake8-bandit = ">=2.1.2"
# flake8-bugbear = ">=21.9.2"
# flake8-docstrings = ">=1.6.0"
# flake8-rst-docstrings = ">=0.2.5"
# furo = ">=2021.11.12"
# isort = ">=5.10.1"
# pep8-naming = ">=0.12.1"
# pre-commit = ">=2.16.0"
# pre-commit-hooks = ">=4.1.0"
# pytest = ">=6.2.5"
# sphinx-copybutton = { version = "0.5.0" }
# pytest-asyncio = { version = ">=0.19.0" }
# pytest-httpx = { version = ">=0.21.0" }
# asynctest = { version = ">=0.13.0" } - Replaced with  unittest.IsolatedAsyncioTestCase
# respx = { version = ">=0.20.0" }
# pyupgrade = ">=2.29.1"
# safety = ">=1.10.3"
# sphinx = ">=4.3.2"
# sphinx-autobuild = ">=2021.3.14"
# sphinx-click = ">=3.0.2"
# typeguard = ">=2.13.3"
# xdoctest = { extras = ["colors"], version = ">=0.15.10" }
# myst-parser = { version = ">=0.16.1" }
# ruff = "^0.0.241"


[tool.poetry.scripts]
intellifire4py = "intellifire4py.__main__:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
pytest = "^7.4.2"
sphinx = "^7.2.6"
pre-commit = "^3.4.0"
pyupgrade = "^3.13.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
pytest-httpx = "^0.26.0"
pytest-asyncio = "^0.21.1"
sphinx-copybutton = "^0.5.2"
myst-parser = "^2.0.0"
sphinx-click = "^5.0.1"
sphinx-autobuild = "^2021.3.14"
typeguard = "^4.1.5"
xdoctest = "^1.1.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["intellifire4py", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
ignore = ["D202", "D412", "E501"]

# Same as Black.
line-length = 88

select = ["B", "B9", "C", "D", "E", "F", "N", "S", "W"]


# Assume Python 3.10.
target-version = "py310"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]


[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
# aiohttp = "^3.8.3"
